# CHATBOT_LITELLM

./: .env  README.md  chainlit.md  chainlit.yaml  chat_history.json  pyproject.toml
src/chatbotlitellm/: __init__.py  chatbot.py
